# mini_perplexity

./: .gitignore  README.md  ROOT.MD
backend/: .env.example  AGENTS_BACKEND.MD  README.md  main.py  pyproject.toml
data/: AGENTS_DATA.MD  DATA.MD  README.md  main.py  pyproject.toml
data/cc_download_script/: cc_download.py  filter.py
data/fineweb/: __init__.py  fineweb.py
frontend/: AGENTS_FRONTEND.MD  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
infra/: INFRA.MD
scripts/: SCRIPTS.MD  init_azure_blob.sh  launch.sh
services/: .env.example
services/embedding/: .env.example  AGENTS_EMBEDDING.MD  Dockerfile  EMBEDDING.MD  README.md  check_stats.py  convert_embedding.py  embedding.py  main.py  publish_schema.py  pyproject.toml  run_embedding.sh  server.py  service_bus.py  start_server.sh
services/indexer/: .env.example  AGENTS_INDEXER.MD  README.md  chunk_index.py  chunk_schema.py  embedding_ingestion.py  indexer.py  main.py  pyproject.toml  run_indexer.sh  server.py  service_bus.py  test_indexer.py  worker.py
services/insert_index/: .env.example  Dockerfile  INDEX.MD  README.md  centroids.npy  centroids.py  centroids_metadata.json  main.py  pyproject.toml  sampling.py  schema.py  server.py  service_bus.py  shards.py  store_blob.py
services/llm/: .env.example  AGENTS_LLM.MD  README.md  main.py  pyproject.toml
services/retriever/: .env.example  AGENTS_RETRIEVER.MD  Dockerfile  README.md  blob_storage.py  cache_manager.py  embedding.py  main.py  pyproject.toml  retrieval.py  schema.py  server.py
(+2 files in other folders)
